# whitehole

./: .dockerignore  .dvcignore  .gitignore  README.md  pyproject.toml
.github/workflows/: docker.yml
.snakemake/iocache/: latest.pkl
configs/instruments/: chime.yaml  eht.yaml  ligo.yaml
configs/models/: alternatives.yaml  bounce.yaml  gr_eternal.yaml  pbh_tunneling.yaml
configs/runs/: gw_run.yaml  joint_run.yaml  radio_run.yaml
containers/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  whitesearch.def
docs/: GW_LIKELIHOOD_STABILIZATION_POSTMORTEM.md
notebooks/: 01_eda_gwosc.ipynb
scripts/: install-git-hooks.ps1  run-functional-tests.ps1  sync-github.ps1  verify-docker.ps1  verify-docker.sh  verify-gwosc-staged.ps1
scripts/hooks/: post-commit
src/whitesearch/: __init__.py  __main__.py  cli.py
src/whitesearch/dataio/: __init__.py  chandra.py  chime_frb.py  eht.py  gw_observation.py  gwosc.py  heasarc.py  loader.py  provenance.py  xmm.py
src/whitesearch/inference/: __init__.py  bilby_runner.py  evidence.py  pycbc_runner.py
src/whitesearch/likelihoods/: __init__.py  base.py  em_likelihood.py  gw_likelihood.py  gw_units.py  joint.py  visibility.py
src/whitesearch/models/: __init__.py  alternatives.py  base.py  bounce.py  gr_eternal.py  pbh_tunneling.py
src/whitesearch/preprocess/: __init__.py  gw_preprocess.py  radio_preprocess.py  xray_preprocess.py
src/whitesearch/simulators/: __init__.py  base.py  em_burst.py  grav_wave.py  image_shadow.py
src/whitesearch/surrogates/: __init__.py  gaussian_process.py
src/whitesearch/utils/: __init__.py  constants.py  math_utils.py
src/whitesearch/validation/: __init__.py  calibration_report.py  gw_diagnostics.py  injection.py  ppc.py  sbc.py  sensitivity.py
tests/: conftest.py  test_calibration_report.py  test_cli_provenance.py  test_dataio.py  test_gw_diagnostics.py  test_gw_preprocess.py  test_gw_units.py  test_gwosc_dynesty.py  test_inference.py  test_likelihoods.py  test_models.py  test_simulators.py
workflows/: Snakefile  cli.py
