[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitesearch"
version = "0.1.1"
description = "White hole candidate signal search and evidence ranking engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WhiteSearch Team" }]

# Minimal runtime: numpy stack + CLI only
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
astro = [
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "pandas>=2.2",
    "h5py>=3.10",
]
gw = [
    "gwpy>=3.0",
]
inference = [
    "bilby>=2.2",
    "dynesty>=2.1",
]
gw-full = [
    "whitesearch[gw,inference]",
    "pycbc>=2.3",
]
imaging = [
    "einsteinpy>=0.4",
    "ehtim>=1.2",
]
tracking = [
    "mlflow>=2.11",
    "dvc>=3.48",
]
viz = [
    "corner>=2.2",
    "scikit-learn>=1.4",
]
hpc = [
    "snakemake>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]
# Typical local science workflow
science = [
    "whitesearch[astro,gw,inference,viz,dev]",
]
all = [
    "whitesearch[science,gw-full,imaging,tracking,hpc]",
]

[project.scripts]
whitesearch = "whitesearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whitesearch = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/whitesearch"]
omit = ["tests/*", "notebooks/*"]
